--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = borgbackup
-url = https://github.com/borgbackup/borg/releases/download/1.1.11/borgbackup-1.1.11.tar.gz
+url = https://github.com/borgbackup/borg/releases/download/1.1.13/borgbackup-1.1.13.tar.gz
 archives = 
 giturl = https://github.com/borgbackup/borg.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
