borgbackup: Autospec creation for update from version 1.1.16 to version 1.1.17
Bruno Behnken (1):
      benchmark: make sure cleanup happens even on exceptions, fixes #5630

Dmitry Astapov (1):
      docs: mention tar --compare (#5880)

Elmar Hoffmann (1):
      add progress indicator for archive check

Felix Schwarz (1):
      docs: replace deprecated function ".add_stylesheet()" for Sphinx 4 compatibility

Guinness (2):
      Update the documentation on hacked backup client.
      Add a hint on sleeping computer in the FAQ

James Buren (4):
      Fix typos (backport of #5597)
      add paragraph added in #5855 to utility documentation source
      add notice about defective hardware to check documentation (#5753)
      resolve clarify borg check --verify-data (#5808)

Nehalenniæ Oudin (2):
      Complete documentation on append-only remote repos (#5519)
      Complements the documentation for pattern files and exclude files (#5520)

Robert Blenis (3):
      cleanup flake8 checks
      fix pep8 violations - conftest.py
      fix pep8 violations - errorlist.py

Swanand01 (1):
      Allow --files-cache=size

Thomas Waldmann (28):
      Fixes BORG_CACHE_DIR crashing borg if empty, fixes #5216
      fix repeated cache tag file writing bug (backport)
      fix missing parameter in "did not consistently fail" msg, see #5822
      handle crash due to kill stale lock race, fixes #5828
      create --dry-run: fix display of kept tagfile, fixes #5834
      missing / healed chunks: always tell chunk ID, fixes #5704
      setup.py: get rid of distutils, use setuptools
      get rid of distutils, use packaging
      github CI: test on py310 (again)
      implement BORG_SELFTEST env variable, fixes #5871
      implement BORG_LIBC env variable, fixes #5870
      add hint about using BORG_LIBC to error messages
      no libc filename fallback on the BSDs
      docs: pull mode: add some warnings, fixes #5827
      fix typo
      fix pyinstaller detection for dir-mode, fixes #5897
 

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = borgbackup
-url = https://github.com/borgbackup/borg/releases/download/1.1.16/borgbackup-1.1.16.tar.gz
+url = https://github.com/borgbackup/borg/releases/download/1.1.17/borgbackup-1.1.17.tar.gz
 archives = 
 giturl = https://github.com/borgbackup/borg.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
